[gd_scene load_steps=3 format=3 uid="uid://ctkxjg73cfako"]

[ext_resource type="Script" path="res://map/lecture_hall.gd" id="1_8j4cy"]
[ext_resource type="Texture2D" uid="uid://8y7bstmnsoej" path="res://assets/lecturehall.jpg" id="1_p0gvo"]

[node name="lecture_hall" type="Node2D"]
script = ExtResource("1_8j4cy")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1, 1.11553)
texture = ExtResource("1_p0gvo")
metadata/_edit_lock_ = true

[node name="spawnPoints" type="Node2D" parent="."]

[node name="1" type="Node2D" parent="spawnPoints"]
position = Vector2(-498, -398)

[node name="2" type="Node2D" parent="spawnPoints"]
position = Vector2(-769, -228)

[node name="3" type="Node2D" parent="spawnPoints"]
position = Vector2(-787, 391)

[node name="4" type="Node2D" parent="spawnPoints"]
position = Vector2(-1065, -404)

[node name="5" type="Node2D" parent="spawnPoints"]
position = Vector2(-488, 401)

[node name="6" type="Node2D" parent="spawnPoints"]
position = Vector2(-782, 228)

[node name="7" type="Node2D" parent="spawnPoints"]
position = Vector2(94, 388)

[node name="8" type="Node2D" parent="spawnPoints"]
position = Vector2(-1067, 228)

[node name="9" type="Node2D" parent="spawnPoints"]
position = Vector2(-769, -386)

[node name="10" type="Node2D" parent="spawnPoints"]
position = Vector2(83, -225)

[node name="11" type="Node2D" parent="spawnPoints"]
position = Vector2(-1074, 383)

[node name="12" type="Node2D" parent="spawnPoints"]
position = Vector2(87, 230)

[node name="13" type="Node2D" parent="spawnPoints"]
position = Vector2(-1074, -235)

[node name="14" type="Node2D" parent="spawnPoints"]
position = Vector2(92, -391)

[node name="deanSpawn" type="Node2D" parent="spawnPoints"]
position = Vector2(1058, -471)

[node name="15" type="Node2D" parent="spawnPoints"]
position = Vector2(-198, 235)

[node name="16" type="Node2D" parent="spawnPoints"]
position = Vector2(-488, 211)

[node name="17" type="Node2D" parent="spawnPoints"]
position = Vector2(-498, -233)

[node name="18" type="Node2D" parent="spawnPoints"]
position = Vector2(-207, -386)

[node name="19" type="Node2D" parent="spawnPoints"]
position = Vector2(-205, -217)

[node name="20" type="Node2D" parent="spawnPoints"]
position = Vector2(-207, 398)

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false
zoom = Vector2(0.45, 0.45)
metadata/_edit_lock_ = true

[node name="deathZones" type="Node2D" parent="."]

[node name="1" type="Node2D" parent="deathZones"]
position = Vector2(1013, 304)

[node name="2" type="Node2D" parent="deathZones"]
position = Vector2(864, 496)

[node name="3" type="Node2D" parent="deathZones"]
position = Vector2(720, 314)

[node name="4" type="Node2D" parent="deathZones"]
position = Vector2(875, 158)

[node name="5" type="Node2D" parent="deathZones"]
position = Vector2(966, 226)

[node name="6" type="Node2D" parent="deathZones"]
position = Vector2(974, 425)

[node name="7" type="Node2D" parent="deathZones"]
position = Vector2(769, 430)

[node name="8" type="Node2D" parent="deathZones"]
position = Vector2(783, 210)
